movie-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie
  labels:
    app: movie
    group: db
spec:
  replicas: 3
  selector:
    matchLabels:
      app: movie    # indicates which Pods (with which labeles) need be handled by this Deployment
  template:
    metadata:         # indicates the metadata that will be added to each Pod
      labels:
        app: movie
        group: db
    spec:
      containers:     # defines a running container inside the Pod
        - name: movie-service
          image: movie-service-image
          imagePullPolicy: Never
          ports:
            - containerPort: 8775   # which port of the container is exposed to the Pod
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
