movie-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-service
  labels:
    group: db
spec:
  type: ClusterIP
  selector:             # indicates into which pods ClusterIP provides access
    app: movie
  ports:
    - port: 8775         # port exposed outside ClusterIP
      targetPort: 8775    # port exposed by Pod
